Gamification as a Subscriber